--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="score">0</div>
-        <div class="grid"></div>
+        <div class="game">
+            <button class="btn" onclick="startGame()">Start Game</button>
+            <h2><span id="score">0</span></h2>
+            <div class="grid"></div>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
