--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="game">
-            <button class="btn" onclick="startGame()">Start Game</button>
+            <button class="btn" onclick="startGame()">New Game</button>
             <h2><span id="score">0</span></h2>
             <div class="grid"></div>
         </div>
